# agentic-evals-lab

./: .gitignore  CITATION.cff  README.md  pyproject.toml
benchmarks/: swe_bench_nano_infer_job.sh  swe_bench_nano_infer_job_alvis.sh
benchmarks/configs/: nano_deepswe-preview.yaml  nano_deepswe-preview_temp0.yaml  nano_devstral.yaml  nano_devstral_temp0.yaml  nano_qwen3-32b.yaml  nano_qwen3-32b_temp0.yaml
benchmarks/swe_bench/: run_all_r2egym_evals.sh  run_harness_eval.sh  run_mini_eval.py  run_nano_eval.py  run_nano_eval_multiple.sh
scripts/: pull_swegym_images.py  pull_swegym_images_job.sh
scripts/grpo/: small_grpo_lora_train_job_alvis.sh
src/: curate_sft_data.py  train_grpo.py
src/agents/: nano_agent.py
src/conf/agent/: nano.yaml
src/conf/model/: small_qwen.yaml
