[project]
name = "crrl"
version = "0.1.0"
description = "Finetuning LLMs with RL to improve program repair capabilities"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Our fork of trl
    "trl @ git+https://github.com/ASSERT-KTH/trl.git@dev",
    # The agent we use for rollout generation,
    "nano-agent @ git+https://github.com/ASSERT-KTH/nano-agent.git",
    "mini-swe-agent>=1.17.0",
    # Optimized loss kernels, forked to support GSPO
    "liger-kernel @ git+https://github.com/BjarniHaukur/liger-kernel.git",
    # Other HF stuff
    "accelerate>=1.8.0",
    "transformers",
    "huggingface-hub",
    "datasets>=4.4.1",
    "peft>=0.15.0",
    "bitsandbytes>=0.44.1; platform_system != 'Darwin'",
    # Logging
    "wandb>=0.23.0",
    # Config
    "hydra-core>=1.3.2",
    # Needed for SWE-Gym, to clone the repos
    "gitpython>=3.1.45",
    # Is required BEFORE the package manager considers vLLM flash-attn
    "setuptools>=75.8.0",
    # efficient training of LLMs
    "deepspeed",
    "boto3>=1.34,<2",
    "botocore>=1.34,<2",
    "swebench>=4.1.0",
    "torch-c-dlpack-ext>=0.1.4",
    "vllm==0.11.0",
    "flash-attn==2.8.3; platform_system != 'Darwin'",
    "flashinfer-python==0.5.0; platform_system != 'Darwin'",
    "pytest>=8.3.4",
]

[tool.uv]
no-build-isolation-package = ["flash-attn", "flashinfer-python"]  
